--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,25 +2,32 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.example.myapps.petsshelter.MainActivity">
-    <item
+   <!-- <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
         android:title="@string/action_settings"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 
     <item
-        android:id="@+id/action_insert"
+        android:id="@+id/action_dummy_data"
         android:title="Put Dummy Data"
-        app:showAsAction="never" />
+         />
 
-    <item
+   <!-- <item
         android:id="@+id/action_delete"
         android:title="Delete All"
-        app:showAsAction="never" />
+        app:showAsAction="never" />-->
 
     <item
         android:id="@+id/action_submit"
         android:icon="@drawable/ic_done_black_24dp"
         android:title="Submit"
         app:showAsAction="always" />
+
+    <item
+        android:id="@+id/action_delete"
+        android:icon="@drawable/ic_delete_black_24dp"
+        android:title="Submit"
+        app:showAsAction="always" />
+
 </menu>
